tests/ui/macros/assert-matches-macro-msg.run.stderr
thread 'main' panicked at $DIR/assert-matches-macro-msg.rs:10:5:
assertion failed: `1 + 1 matches 3`
 error: 1 + 1 definitely should be 3
  left: `2`
 right: `3`
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
